src/objects/Fielo_InfraccionFraude__c.object
<CustomObject>
    <fields>
        <fullName>F_Descripcion__c</fullName>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Infracciones de Fraude</relationshipLabel>
        <relationshipName>Infracciones_de_Fraude</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_Venta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venta</label>
        <referenceTo>Fielo_Venta__c</referenceTo>
        <relationshipLabel>Infracciones de Fraude</relationshipLabel>
        <relationshipName>Infracciones_de_Fraude</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Infracción de Fraude</label>
    <listViews>
        <fullName>Fielo_All</fullName>
        <columns>NAME</columns>
        <columns>F_Member__c</columns>
        <columns>F_Venta__c</columns>
        <columns>F_Descripcion__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IF-{000000}</displayFormat>
        <label>Número Infracción</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Infracciones de Fraude</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>